k8s/policy/validate-task-request-datasets-error/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidateTaskRequestDatasetsError
metadata:
  name: validate-task-request-datasets-error
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [policydriven.unimi.it]
        kinds: [TaskRequest]
